fixed the user avatar dropdown alignment

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -60,8 +60,13 @@
 }
 
 @media only screen and (max-width: 480px) {
-.dropdown-menu-right {
+#org-dropdown  {
     right: -80px;
     left: auto;
   }
+#user-avatar {
+    right: 0px;
+    left: auto;
+}
+
 }
